--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,27 @@
+body {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+.main-cards {
+  margin-top: 40px;
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.main-card {
+  padding: 10px 20px;
+  border-radius: 10px;
+  background: #ffffff;
+  box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.1);
+}
+
+.main-card a {
+  text-decoration: none;
+  color: #000;
+}
+
 .slider-main {
   display: flex;
   align-items: center;
@@ -18,11 +42,11 @@
   width: 100%;
 }
 
-.main{
+.main {
   display: block;
 }
 
-.hidden{
+.hidden {
   display: none;
 }
 
@@ -45,12 +69,12 @@
   -webkit-transform: rotate(135deg);
 }
 
-.dots{
+.dots {
   display: flex;
   justify-content: center;
 }
 
-.dot{
+.dot {
   width: 20px;
   height: 20px;
   background-color: grey;
@@ -58,6 +82,28 @@
   margin: 0 6px;
 }
 
-.active{
+.active {
   background-color: green;
+}
+
+.hero {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100vh;
+  background: linear-gradient(to right, blue, pink);
+}
+
+.clock-wrapper {
+  display: flex;
+  padding: 50px;
+  background: rgba(237, 231, 255, 0.02);
+  box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+}
+
+.clock-item {
+  margin-left: 20px;
+  font-size: 80px;
+  color: #ffffff;
 }
