--- a/styles.css
+++ b/styles.css
@@ -252,5 +252,15 @@ body {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-evenly;
-  align-items: flex-start;
+}
+
+.picture {
+  width: 300px;
+  height: 200px;
+  object-fit:cover; 
+  margin-top: 15px;
+  background-position: center;
+  background-size: cover;
+  border-radius: 2px;
+  cursor: pointer;
 }
