--- a/styles.css
+++ b/styles.css
@@ -89,6 +89,7 @@ body {
 .hero {
   display: flex;
   justify-content: center;
+  flex-direction: column;
   align-items: center;
   width: 100%;
   height: 100vh;
@@ -96,6 +97,8 @@ body {
 }
 
 .clock-wrapper {
+  width: 30%;
+  margin-bottom: 30px;
   display: flex;
   padding: 50px;
   background: rgba(237, 231, 255, 0.02);
@@ -105,6 +108,11 @@ body {
 .clock-item {
   margin-left: 20px;
   font-size: 80px;
+  color: #ffffff;
+}
+
+.clock-item-title {
+  font-size: 20px;
   color: #ffffff;
 }
 
