--- a/styles.css
+++ b/styles.css
@@ -7,19 +7,24 @@ body {
 .main-cards {
   margin-top: 40px;
   display: flex;
+  flex-direction: column;
+  align-items: center;
   justify-content: space-evenly;
 }
 
 .main-card {
-  padding: 10px 20px;
-  border-radius: 10px;
-  background: #ffffff;
-  box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.1);
+  font-family: Arial, Helvetica, sans-serif;
+  width: 300px;
+  margin-bottom: 30px;
+  padding: 18px;
+  background: rgba(237, 231, 255, 0.02);
+  box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+  text-decoration: none;
+  color: #fff;
 }
 
-.main-card a {
-  text-decoration: none;
-  color: #000;
+.main-card:hover {
+  box-shadow: 6px 6px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
 }
 
 .slider-main {
@@ -38,23 +43,23 @@ body {
   position: relative;
 }
 
-.slider-wrapper img {
+.hidden {
   width: 100%;
+  display: none;
 }
 
 .main {
+  width: 100%;
   display: block;
-}
-
-.hidden {
-  display: none;
 }
 
 .arrow {
   border: solid black;
+  background-color: #fff;
   border-width: 0 3px 3px 0;
   display: inline-block;
   padding: 9px;
+  cursor: pointer;
 }
 
 .right {
@@ -83,7 +88,11 @@ body {
 }
 
 .active {
+  width: 20px;
+  height: 20px;
   background-color: green;
+  border-radius: 50%;
+  margin: 0 6px;
 }
 
 .hero {
@@ -100,6 +109,7 @@ body {
   width: 30%;
   margin-bottom: 30px;
   display: flex;
+  justify-content: center;
   padding: 50px;
   background: rgba(237, 231, 255, 0.02);
   box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
@@ -207,7 +217,7 @@ body {
   background-position: right center;
 }
 
-.product-wrapper{
+.product-wrapper {
   display: flex;
   justify-content: space-between;
   margin: 6px 0;
@@ -220,7 +230,7 @@ body {
   font-size: 24px;
 }
 
-.list-product p{
+.list-product p {
   margin: 0;
 }
 
@@ -273,3 +283,47 @@ body {
   justify-content: space-evenly;
   align-items: flex-start;
 }
+
+.timer-title {
+  font-size: 24px;
+  margin-bottom: 20px;
+  color: #fff;
+  font-family: Verdana;
+}
+
+.timer-button-wrapper {
+  display: flex;
+  justify-content: space-between;
+  margin: 20px auto;
+  width: 30%;
+}
+
+.timer-button-wrapper a {
+  padding: 10px 30px;
+  text-align: center;
+  margin-bottom: 10px;
+  transition: 0.3s;
+  color: #fff;
+  box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+  border: none;
+  cursor: pointer;
+  font-size: 20px;
+  font-family: Verdana;
+}
+
+.timer-button-wrapper a:hover {
+  box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 4px 4px rgba(0, 0, 0, 0.22);
+}
+
+.lap-wrapper{
+  padding: 0 20px;
+  overflow: scroll;
+  height: 500px;
+}
+
+.lap-wrapper p{
+  color: #fff;
+  font-family: Verdana;
+  font-size: 18px;
+}
+
